# lazy-bird

./: .gitignore  CLAUDE.md  INSTALL.md  MANIFEST.in  PHASE0_UI_SUMMARY.md  pyproject.toml
Docs/Design/: multi-framework-support.md
config/: config.example.yml
docker/: README.md  docker-compose.yml
docker/claude-agent/: Dockerfile
lazy_bird/: __init__.py  cli.py
scripts/: agent-runner.sh  godot-server.py  issue-watcher.py  test-worktree.sh  validate-godot.sh
systemd/: README.md  godot-server.service
web/: README.md
web/backend/: .gitignore  app.py  requirements.txt
web/backend/api/: projects.py  queue.py  settings.py  system.py
web/backend/services/: config_service.py  queue_service.py  systemd_service.py
web/frontend/: README.md  package-lock.json  package.json
web/frontend/src/: App.tsx
web/frontend/src/components/: Layout.tsx  ProjectForm.tsx
web/frontend/src/lib/: api.ts
web/frontend/src/pages/: ProjectsPage.tsx  QueuePage.tsx  ServicesPage.tsx  SettingsPage.tsx
web/frontend/src/types/: api.ts
